--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -115,7 +115,7 @@ main a.govuk-link:hover {
     /*recreate new hover styles of latest gds*/
     text-decoration-skip-ink: none;
     /*text-decoration-thickness: max(3px, 0.1875rem, 0.12em);*/
-    text-decoration-thickness: max(0.1875rem);
+    text-decoration-thickness: 0.1875rem;
 }
 
 .opss-no-wrap {
