--- a/app/views/psd-revised-flow/help-how-to-use-psd.html
+++ b/app/views/psd-revised-flow/help-how-to-use-psd.html
@@ -80,6 +80,15 @@ Help - How to operate the Product Safety Database
                     <li>
                         <a href="#content-05" class="govuk-link govuk-link--no-visited-state">Add the <abbr>OPSS</abbr> Incident Management Team to a case</a>
                     </li>
+                    <li>
+                        <a href="#content-06" class="govuk-link govuk-link--no-visited-state">Create a product record</a>
+                    </li>
+                    <li>
+                        <a href="#content-07" class="govuk-link govuk-link--no-visited-state">Find a product record</a>
+                    </li>
+
+
+
 
                     <li>
                         <a href="#content-0xxxxxx" class="govuk-link govuk-link--no-visited-state">Finding information about products and cases</a>
@@ -130,7 +139,7 @@ Help - How to operate the Product Safety Database
                 <li>In the products area, search for a product using the 'All products &ndash; Search' option<a href="#findproduct" class="govuk-link govuk-link--no-visited-state govuk-link--no-underline opss-secondary-text"><sup class="opss-font-size-14">*</sup></a></li>
                 <li>Open a product record to view it</li>
                 <li>Select the 'Create a new case for this product' option</li>
-                <li>Then follow the on-screen steps to create the case</li>
+                <li>Complete the form journey process</li>
             </ol>
         </div>
 
@@ -207,7 +216,7 @@ Help - How to operate the Product Safety Database
         </h3>
 
         <p class="govuk-body">
-            When you have finished adding information and assets to a case and once the measures taken are completed, you should add the <abbr title="Office for Product Safety and Standards">OPSS</abbr> Incident Management Team (<abbr>IMT</abbr>) to the case, if:
+            When you have finished adding information and assets to a case and once the measures taken are completed, you should add the <abbr>OPSS</abbr> Incident Management Team (<abbr>IMT</abbr>) to the case, if:
         </p>
 
         <ul class="govuk-list govuk-list--bullet">
@@ -240,18 +249,70 @@ Help - How to operate the Product Safety Database
             <sup id="recallthecase" class="opss-font-size-14">**</sup>If the product poses a serious risk, you must also set the <abbr>OPSS</abbr> Incident Management Team (<abbr>IMT</abbr>) as the case owner, which will ensure the recall can be added to the Government Recall Site and the <abbr title="Organisation for Economic Co-operation and Development">OECD</abbr> Global Recall Portal.
         </p>
 
+        <div class="govuk-inset-text">
+            <p class="govuk-body">
+                To set the <abbr>OPSS</abbr> Incident Management Team (<abbr>IMT</abbr>) as the case owner:
+            </p>
+
+            <ol class="govuk-list govuk-list--number govuk-list--spaced">
+                <li>Find the case</li>
+                <li>Open the case to view the main case page for the case</li>
+                <li>In the 'Sharing and collaboration' section &hellip;</li>
+                <li>Select the 'Change' option in the 'Case owner' data row</li>
+                <li>On the 'Change the case owner' page &ndash; assuming you have already added the <abbr>OPSS</abbr> Incident Management Team to the case &ndash; select '<abbr>OPSS</abbr> Incident Management' as the case owner</li>
+                <li>Complete the form journey process</li>
+            </ol>
+        </div>
+
+        <h3 class="govuk-heading-m govuk-!-margin-top-8" id="content-06">
+            6. Create a product record
+        </h3>
+
         <p class="govuk-body">
-            To set the <abbr>OPSS</abbr> Incident Management Team (<abbr>IMT</abbr>) as the case owner:
+            A product record is what records the basic information about a product, such as its brand name, its model name, and its barcode. At least one product record should be included within a case (to represent the product). The same product record can be reused and included within many different cases.
         </p>
 
-        <ol class="govuk-list govuk-list--number govuk-list--spaced">
-            <li>Find the case</li>
-            <li>Open the case to view the main case page for the case</li>
-            <li>In the 'Sharing and collaboration' section &hellip;</li>
-            <li>Select the 'Change' option in the 'Case owner' data row</li>
-            <li>On the 'Change the case owner' page &ndash; assuming you have already added the <abbr>OPSS</abbr> Incident Management Team to the case &ndash; select '<abbr>OPSS</abbr> Incident Management' as the case owner</li>
-            <li>Complete the form journey process</li>
-        </ol>
+        <div class="govuk-inset-text">
+            Before you create a new product record you should first check that a product record representing the product does not already exist within the Product Safety Database (<abbr>PSD</abbr>). You should avoid creating duplicates.
+        </div>
+
+        <p class="govuk-body">
+            A counterfeit product and the real product should be represented by two different product records.
+        </p>
+
+        <div class="govuk-inset-text">
+            <p class="govuk-body">
+                To create a product record:
+            </p>
+
+            <ol class="govuk-list govuk-list--number govuk-list--spaced">
+                <li>In the products area &hellip;</li>
+                <li>Select the 'Create a new product record' option on the 'Your products', 'Team products' or 'All products &ndash; Search' page</li>
+                <li>Complete the form journey process</li>
+            </ol>
+        </div>
+
+        <p class="govuk-body">
+            When you have finished the process of creating a product record, it can be found by using the 'All products &ndash; Search' page. Once it is added to your own case or to one of your team's cases, it will also appear in the 'Your products' and 'Team products' pages.
+        </p>
+
+        <h3 class="govuk-heading-m govuk-!-margin-top-8" id="content-07">
+            7. Find a product record
+        </h3>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
