--- a/app/views/psd-revised-flow/what-is-the-case-name.html
+++ b/app/views/psd-revised-flow/what-is-the-case-name.html
@@ -48,6 +48,10 @@ href: "do-you-want-to-add-a-ref-number"
         <div class="govuk-grid-column-one-third">
             <h2 class="govuk-heading-s">Case name examples</h2>
 
+            <p class="govuk-body-s opss-secondary-text">
+                A suggested format would be, brand name, model name and description of the hazard.
+            </p>
+
             <ul id="case-name-examples" class="govuk-list govuk-list--bullet govuk-list--spaced govuk-!-font-size-16 opss-secondary-text">
                 <li>Non nisi in omnis nobis facere tempora</li>
                 <li>Lorem ipsum dolor sit amet</li>
