--- a/app/views/psd-revised-flow/what-is-the-case-name-error.html
+++ b/app/views/psd-revised-flow/what-is-the-case-name-error.html
@@ -1,72 +1,72 @@
 {% extends "layout-psd-menu_cases.html" %}
 
 {% block pageTitle %}
-    Error: What is the case name
+Error: What is the case name
 {% endblock %}
 
 {% block beforeContent %}
-    {{ govukBackLink({
-        text: "Back",
-        href: "do-you-want-to-add-a-ref-number"
-    }) }}
+{{ govukBackLink({
+text: "Back",
+href: "do-you-want-to-add-a-ref-number"
+}) }}
 {% endblock %}
 
 
 {% block content %}
 <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" data-module="govuk-error-summary">
-    <h2 class="govuk-error-summary__title" id="error-summary-title">
-      There is a problem
-    </h2>
-    <div class="govuk-error-summary__body">
-      <ul class="govuk-list govuk-error-summary__list">
-        <li>
-          <a href="#case-name">Enter a case name</a>
-        </li>
-        <li>
-          <a href="#case-name">The case name has already been used in an open case by your team</a>
-        </li>
-      </ul>
-    </div>
+  <h2 class="govuk-error-summary__title" id="error-summary-title">
+    There is a problem
+  </h2>
+  <div class="govuk-error-summary__body">
+    <ul class="govuk-list govuk-error-summary__list">
+      <li>
+        <a href="#case-name">Enter a case name</a>
+      </li>
+      <li>
+        <a href="#case-name">The case name has already been used in an open case by your team</a>
+      </li>
+    </ul>
   </div>
-  
+</div>
+
 <form action="case-created-confirmation" method="post" novalidate>
 
-    <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">  
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
 
-            <div class="govuk-form-group govuk-form-group--error">
-                <h1 class="govuk-label-wrapper">
-                    <label class="govuk-label govuk-label--l" for="example">
-                        What is the case name?
-                    </label>
-                </h1>
+      <div class="govuk-form-group govuk-form-group--error">
+        <h1 class="govuk-label-wrapper">
+          <label class="govuk-label govuk-label--l" for="example">
+            What is the case name? Example of the error message only...
+          </label>
+        </h1>
 
-                <div id="case-name-hint" class="govuk-hint govuk-!-margin-bottom-5">
-                  Give the case a short descriptive title. For example, &quot;Overheating handheld Minolta camera&quot;. 
-                </div>   
-
-                <p id="case-name-error" class="govuk-error-message">
-                    <span class="govuk-visually-hidden">Error:</span> The case name has already been used in an open case by your team
-                </p>
-
-                <input class="govuk-input govuk-!-width-two-thirds govuk-input--error" id="case-name" name="case-name" type="text" aria-describedby="case-name-hint case-name-error" spellcheck="false" maxlength="45">
-                
-                <!-- A 45 max character count has been added here -->
-
-            </div>
-
+        <div id="case-name-hint" class="govuk-hint govuk-!-margin-bottom-5">
+          Give the case a short descriptive title. For example, &quot;Overheating handheld Minolta camera&quot;.
         </div>
+
+        <p id="case-name-error" class="govuk-error-message">
+          <span class="govuk-visually-hidden">Error:</span> The case name has already been used in an open case by your team
+        </p>
+
+        <input class="govuk-input govuk-!-width-two-thirds govuk-input--error" id="case-name" name="case-name" type="text" aria-describedby="case-name-hint case-name-error" spellcheck="false" maxlength="45">
+
+        <!-- A 45 max character count has been added here -->
+
+      </div>
+
     </div>
-    
-    <div class="govuk-button-group">
-        <button class="govuk-button">
-          Save
-        </button>
-      
-        <a class="govuk-link govuk-link--no-visited-state" href="#">Cancel</a><!-- do not create a case return to 'Your cases' page -->
-    </div>     
+  </div>
+
+  <div class="govuk-button-group">
+    <button class="govuk-button">
+      Save
+    </button>
+
+    <a class="govuk-link govuk-link--no-visited-state" href="#">Cancel</a><!-- do not create a case return to 'Your cases' page -->
+  </div>
 
 </form>
 
-  
+
 {% endblock %}
