updates to the help text

--- a/app/views/psd-revised-flow/help-how-to-use-psd.html
+++ b/app/views/psd-revised-flow/help-how-to-use-psd.html
@@ -89,7 +89,9 @@ Help - How to operate the Product Safety Database
                     <li>
                         <a href="#content-08" class="govuk-link govuk-link--no-visited-state">Find a product record</a>
                     </li>
-
+                    <li>
+                        <a href="#content-08" class="govuk-link govuk-link--no-visited-state">Viewing product record information</a>
+                    </li>
 
 
 
@@ -108,7 +110,7 @@ Help - How to operate the Product Safety Database
         </p>
 
         <figure class="govuk-!-margin-bottom-5 opss-keep-for-desktop">
-            <img src="../public/images/help_top-nav-link.gif" class="opss-border-all " alt="What the main navigation menu looks like">
+            <img src="../public/images/help_top-nav-link.gif" class="opss-border-all" alt="What the main navigation menu looks like">
             <figcaption class="govuk-body govuk-!-font-size-14 opss-secondary-text">The cases area and products area are accessed using the main navigation menu</figcaption>
         </figure>
 
@@ -151,7 +153,7 @@ Help - How to operate the Product Safety Database
         </div>
 
         <figure class="govuk-!-margin-bottom-5 opss-keep-for-desktop">
-            <img src="../public/images/help_create-a-new-case-link.gif" class="opss-border-all " alt="What the 'Create a new case' hyperlink looks like">
+            <img src="../public/images/help_create-a-new-case-link.gif" class="opss-border-all" alt="What the 'Create a new case' hyperlink looks like">
             <figcaption class="govuk-body govuk-!-font-size-14 opss-secondary-text">The 'Create a new case for this product' option is on a product record page</figcaption>
         </figure>
 
@@ -188,7 +190,7 @@ Help - How to operate the Product Safety Database
         </div>
 
         <figure class="govuk-!-margin-bottom-5 opss-keep-for-desktop">
-            <img src="../public/images/help_search-for-cases-link.gif" class="opss-border-all " alt="What the cases left navigation looks like">
+            <img src="../public/images/help_search-for-cases-link.gif" class="opss-border-all" alt="What the cases left navigation looks like">
             <figcaption class="govuk-body govuk-!-font-size-14 opss-secondary-text">Find cases by using the left navigation menu in the cases area</figcaption>
         </figure>
 
@@ -209,12 +211,16 @@ Help - How to operate the Product Safety Database
         </p>
 
         <figure class="govuk-!-margin-bottom-5 opss-keep-for-desktop">
-            <img src="../public/images/help_search-for-cases-link.gif" class="opss-border-all " alt="What the individual case left navigation looks like">
+            <img src="../public/images/help_case-left-nav.gif" class="opss-border-all" alt="What the individual case left navigation looks like">
             <figcaption class="govuk-body govuk-!-font-size-14 opss-secondary-text">Find individual case information using the left navigation menu</figcaption>
         </figure>
 
         <p class="govuk-body">
-            The secondary case navigation menu provides access to all the pages of information which form the one case. These include, the main case page, the products, relevant businesses, case images and all the supporting information for the case, such as risk assessments and corrective actions.
+            The secondary case navigation menu provides access to all the information that forms one case. These include, the main case page, the product(s), relevant businesses, case images and all the supporting information for the case, such as risk assessments and corrective actions.
+        </p>
+
+        <p class="govuk-body">
+            On the products page for an individual case, you can find basic information about the product(s) included in the case, but you can also <span class="govuk-!-font-weight-bold">discover which cases within the <abbr>PSD</abbr> may have also included the same product record</span>. To view previous or current investigations relating to the same product, select the 'Cases' tab.
         </p>
 
         <h3 class="govuk-heading-m govuk-!-margin-top-8" id="content-05">
@@ -240,8 +246,8 @@ Help - How to operate the Product Safety Database
         </p>
 
         <figure class="govuk-!-margin-bottom-5 opss-keep-for-desktop">
-            <img src="../public/images/help_search-for-cases-link.gif" class="opss-border-all " alt="What the panel of options for adding information looks like">
-            <figcaption class="govuk-body govuk-!-font-size-14 opss-secondary-text">Add information to the case by using these options</figcaption>
+            <img src="../public/images/help_action-bar.gif" class="opss-border-all" alt="What the panel of options for adding information looks like">
+            <figcaption class="govuk-body govuk-!-font-size-14 opss-secondary-text">Add information and assets to the case by using these options</figcaption>
         </figure>
 
         <p class="govuk-body">
@@ -313,6 +319,10 @@ Help - How to operate the Product Safety Database
             A product record is what records the basic information about a product, such as its brand name, its model name, and its barcode. At least one product record should be included within a case (to represent the product). The same product record can be reused and included within many different cases.
         </p>
 
+        <p class="govuk-body">
+            Creating a product record is not the same as creating a case.
+        </p>
+
         <div class="govuk-inset-text">
             Before you create a new product record you should first check that a product record representing the product does not already exist within the Product Safety Database (<abbr>PSD</abbr>). You should avoid creating duplicates.
         </div>
@@ -333,8 +343,13 @@ Help - How to operate the Product Safety Database
             </ol>
         </div>
 
+        <figure class="govuk-!-margin-bottom-5 opss-keep-for-desktop">
+            <img src="../public/images/help_create-a-product.gif" class="opss-border-all" alt="What the create a product record option looks like">
+            <figcaption class="govuk-body govuk-!-font-size-14 opss-secondary-text">The 'Create a product record' option is on all the product record search pages</figcaption>
+        </figure>
+
         <p class="govuk-body">
-            When you have finished the process of creating a product record, it can be found by using the 'All products &ndash; Search' page. If it is added to your own case or to one of your team's cases, it will also appear in the 'Your products' or 'Team products' pages.
+            When you have finished the process of creating a product record, it can be found by using the 'All products &ndash; Search' page. When it is included in one of your own cases or one of your team's cases, it will also appear in the 'Your products' or 'Team products' pages.
         </p>
 
         <p class="govuk-body">
@@ -342,16 +357,21 @@ Help - How to operate the Product Safety Database
         </p>
 
         <p class="govuk-body">
-            When you close a case, a <span class="govuk-!-font-weight-bold">unique copy</span> of each product record included in the case is automatically created and permanently replaces the original versions for that individual case. This ensures the original product information for a case is protected when a case is closed.
+            When you close a case, a <span class="govuk-!-font-weight-bold">unique copy</span> of each product record included in the case is automatically created and permanently replaces the original versions for that individual case. This ensures the original product information in a case is protected when a case is closed.
         </p>
 
         <h3 class="govuk-heading-m govuk-!-margin-top-8" id="content-08">
             8. Find a product record
         </h3>
 
+        <h3 class="govuk-heading-m govuk-!-margin-top-8" id="content-09">
+            9. Viewing product record information
+        </h3>
 
-
-
+        <figure class="govuk-!-margin-bottom-5 opss-keep-for-desktop">
+            <img src="../public/images/help_product-left-nav.gif" class="opss-border-all" alt="What the individual product record left navigation looks like">
+            <figcaption class="govuk-body govuk-!-font-size-14 opss-secondary-text">Find individual product record information using the left navigation menu</figcaption>
+        </figure>
 
 
 
