completed may content

--- a/app/views/psd-revised-flow/design-assets-list.html
+++ b/app/views/psd-revised-flow/design-assets-list.html
@@ -229,8 +229,11 @@ List of page designs for revised PSD create a case journey
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/activity.html" target="_blank">Case page - Activity</a> - recycles the current <abbr>HTML</abbr> for the activity
                 list
             </li>
-            <li>
+            <!--li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/help.html" target="_blank">Case page - Help</a>
+            </li-->
+            <li>
+                <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/help-how-to-use-psd.html" target="_blank">Case page - Help - How to operate the <abbr>PSD</abbr></a>
             </li>
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-trading-stds-landing-empty-specific-values.html" target="_blank">Case
